@@ -1,6 +1,10 @@
 2011-05-21  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
 * sio.c: Fixed a bug with SIO sounds remaining audible after saving to tape
   with SIO patch (reported by Krzysztof Karkosza).
+  
+* atari.c: During coldstart, don't automatically hold Option on non-XL/XE
+  machines. This fixes unwanted keystrokes when running cartridges on 400/800
+  with the "Disable Basic" option. Also, don't hold Start on booting the 5200.
 
 
 2011-05-18  Tomasz Krasuski <kr0tki@poczta.onet.pl>
